--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -8,19 +8,54 @@
 		<title>Blank Template</title>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="https://www.google.com/fonts#UsePlace:use/Collection:Open+Sans">
 
 	</head>
 	<body>
-		<div id="container">
-			<header>
-				<h1>Blank Template</h1>
-				<h2>Just another blank template</h2>
+		<header>				
+			<h1>Relaxr</h1>
+				<h2>Get piece of mind with a single tap</h2>
+				
+				<button id="button1"> Get it Now </button>
+				</div>	
 			</header>
+			
+			
+		<main>
+				<h1> Benefits </h1>
+				<p> The perfect person assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+				<ul>
+					<li> Schedule meetings for you</li>
+					<li> Excel automation to complete your work for you</li>
+					<li>Responds to email on your behalf</li>
+					<li>Does all your work for you with our revolutionary AI technology</li>
+				</ul>
+		</main>
+
+			<section>
+				<p> "Relaxr changed my life. I've been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work." </p>
+				<h3> - Amanda, Inuit</h3>
+			</section>
+
+			<nav id="sign_up_button">
+				<button> Sign up Now! </button>
+			</nav>
+
+			<nav id="social">
+				<h1> Relaxr</h1>
+				<button style="background: url(twitter.png)"/>
+				<button style="background: url(facebook.png)"/>
+
+			</nav>
+
+
+
+
 			<footer>
 				&copy; Footer Goes Here
 			</footer>
-		</div><!-- #container -->
+		
 	</body>
 </html>
