--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -19,7 +19,7 @@
 			<header>
 				<h1 id="Relaxr">Relaxr</h1>
 				<h2 id="tagLine">Get piece of mind with a single tap</h2>
-				<button id="getItButton" type="button">Get it Now</button>
+				<button id="getItNow" type="button">Get it Now</button>
 			</header>
 		<div class="benefits">
 			<h2 id=benefitHeadline>Benefits</h2>
@@ -36,7 +36,7 @@
 		</div>
 		<div class="testimonial">
 			<p id="testimonialQuote">“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.”</p>
-			<h3 id="quoteAuthor">- Amanda, Intuit</h3>
+			<h3 id="quoteName">- Amanda, Intuit</h3>
 		</div>
 		<div id="signUp">
 			<button id ="sign" type="button">Sign Up Now!</button>
